--- a/auth/registerFone.html
+++ b/auth/registerFone.html
@@ -43,6 +43,7 @@
       background-color: rgb(128, 128, 128);
       color: rgb(15, 15, 15);
     }
+
     .button {
       margin-top: 10px;
     }
@@ -131,23 +132,38 @@
                   <small id="tsaErr"></small>
                 </div>
                 <div class="form-group">
-                  <label>Ward:</label>
-                  <input type="text" class="form-control" name="ward" id="wd">
-                  <small id="wdErr"></small>
-                </div>
-                <div class="form-group">
-                  <label>Activities carried out:</label>
-                  <input type="text" class="form-control" name="activites" id="act">
-                  <small id="actErr"></small>
-                </div>
-                <div class="form-group">
                   <label>Date of registration:</label>
                   <input type="date" class="form-control" name="dreg" id="dr">
                   <small id="drErr"></small>
                 </div>
+                <div class="form-group">
+                  <label>Ward:</label>
+                  <select class="form-control" id="wd" name="ward">
+                    <option value="">(Select ward)</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <small id="wdErr"></small>
+                </div>
+                <div class="form-group">
+                  <label>Activities carried out:</label>
+                  <label class="form-check">
+                    <input type="checkbox" class="form-check-input" id="poultry" name="poultry" value="Poultry Farming"><span>Poultry Farming</span>
+                  </label>
+                  <label class="form-check">
+                    <input type="checkbox" class="form-check-input" id="hort" name="horticulture"
+                      value="Horticulture"><span>Horticulture</span>
+                  </label>
+                  <label class="form-check">
+                    <input type="checkbox" class="form-check-input" id="dairy" name="dairy"
+                      value="Dairy farming"><span>Dairy Farming</span>
+                  </label>
+                  <small id="actErr"></small>
+                </div>
               </fieldset>
               <div class="button">
-              <button id="submit" class="btn btn-primary btn-block">Submit</button>
+                <button id="submit" class="btn btn-primary btn-block">Submit</button>
               </div>
             </form>
           </div>
