--- a/auth/registerUfarmer.html
+++ b/auth/registerUfarmer.html
@@ -26,12 +26,14 @@
       margin-top: 20px;
       margin-bottom: 20px;
     }
-    .info{
+
+    .info {
       font-style: italic;
       text-align: center;
-      
+
     }
-    form{
+
+    form {
       background-color: azure;
     }
   </style>
@@ -89,12 +91,27 @@
               </div>
               <div class="form-group">
                 <label>Ward:</label>
-                <input type="text" class="form-control" name="ward name" id="wd" />
-                <small id="wdErr"></small>
+                <select class="form-control" id="wd" name="ward">
+                  <option value="">(Select ward)</option>
+                  <option value="1">1</option>
+                  <option value="2">2</option>
+                  <option value="3">3</option>
+                  <option value="4">4</option>
+                  <small id="wdErr"></small>
               </div>
               <div class="form-group">
                 <label>Activities carried out:</label>
-                <input type="text" class="form-control" name="activites" id="act" />
+                <label class="form-check">
+                  <input type="checkbox" class="form-check-input" id="poultry" name="poultry" value="Poultry Farming"><span>Poultry Farming</span>
+                </label>
+                <label class="form-check">
+                  <input type="checkbox" class="form-check-input" id="hort" name="horticulture"
+                    value="Horticulture"><span>Horticulture</span>
+                </label>
+                <label class="form-check">
+                  <input type="checkbox" class="form-check-input" id="dairy" name="dairy"
+                    value="Dairy farming"><span>Dairy Farming</span>
+                </label>
                 <small id="actErr"></small>
               </div>
               <div class="form-group">
