--- a/products/upload.html
+++ b/products/upload.html
@@ -11,9 +11,17 @@
 
 
     <Style>
-        
-        .card-body{
-            background-color: white;
+        /* .card-body {
+            background-color: ;
+        } */
+        .row{
+            padding-top: 20px;
+        }
+        .card {
+            margin-bottom: 20px;
+        }
+        .button{
+            margin-top: 10px;
         }
     </Style>
 </head>
@@ -24,14 +32,12 @@
     <!-- nav bar ends here -->
     <div class="container-fluid">
         <div class="row justify-content-center">
-            <div class="col-md-10">
+            <div class="col-md-7">
                 <div class="card">
-                    <div class="card header">
-                        <h4>Upload here</h4>
-                    </div>
-                    <img src="" alt="food product" class="card-img-side">
+                    <div class="card header"><h5>UPLOAD HERE</h5></div>
                     <div class="card-body">
                         <form action="#" name="upload form" id="upload" onsubmit="validate(event)" method="post">
+                            <img src="" alt="food product" class="card-img-side">
                             <div class="form form-group">
                                 <label>Product name</label>
                                 <input type="text" class="form-control" id="pName" name="product name">
@@ -71,34 +77,42 @@
                             <div class="form form-group">
                                 <label>Mode of payment</label>
                                 <label class="form-check">
-                                    <input type="checkbox" class="form-check-input" id="cash" name="Cash" value="Cash"><span>Cash</span>
+                                    <input type="checkbox" class="form-check-input" id="cash" name="Cash"
+                                        value="Cash"><span>Cash</span>
                                 </label>
                                 <label class="form-check">
-                                    <input type="checkbox" class="form-check-input" id="mMoney" name="mobile money" value="Mobile Money"><span>Mobile Money</span>
+                                    <input type="checkbox" class="form-check-input" id="mMoney" name="mobile money"
+                                        value="Mobile Money"><span>Mobile Money</span>
                                 </label>
                                 <small id="payErr"></small>
                             </div>
                             <div class="form form-group">
                                 <label>Mode of delivery</label>
                                 <label class="form-check">
-                                    <input type="checkbox" class="form-check-input" id="pick" name="pickup" value="Pickup"><span>Pick up</span>
+                                    <input type="checkbox" class="form-check-input" id="pick" name="pickup"
+                                        value="Pickup"><span>Pick up</span>
                                 </label>
                                 <label class="form-check">
-                                    <input type="checkbox" class="form-check-input" id="hDeli" name="home delivery" value="Home Delivery"><span>Home delivery</span>
+                                    <input type="checkbox" class="form-check-input" id="hDeli" name="home delivery"
+                                        value="Home Delivery"><span>Home delivery</span>
                                 </label>
                                 <small id="deliErr"></small>
                             </div>
                             <div class="form form-group">
                                 <label>Produce type</label>
                                 <label class="form-check">
-                                    <input type="radio" class="form-check-input" id="org" name="pType" value="organic"><span>Organic</span>
+                                    <input type="radio" class="form-check-input" id="org" name="pType"
+                                        value="organic"><span>Organic</span>
                                 </label>
                                 <label class="form-check">
-                                    <input type="radio" class="form-check-input" id="nOrg" name="pType" value="Non-organic"><span>Non-organic</span>
+                                    <input type="radio" class="form-check-input" id="nOrg" name="pType"
+                                        value="Non-organic"><span>Non-organic</span>
                                 </label>
                                 <small id="typeErr"></small>
-                            </div>  
-                            <button class="btn-primary" id="submit">Submit</button>                       
+                            </div>
+                            <div class="button">
+                            <button class="btn-primary" id="submit">Submit</button>
+                            </div>
                         </form>
                     </div>
                 </div>
