CHANGEs TO ALL dashboards

--- a/landing pages/aoDash.html
+++ b/landing pages/aoDash.html
@@ -11,9 +11,6 @@
 </head>
 
 <body>
-    <!-- nav starts Here -->
-    <div w3-include-html="/includes/navbar.html"></div>
-    <!-- nav bar ends here -->
     <!-- Sidebar -->
     <div class="w3-sidebar w3-bar-block w3-border-right" id="mySidebar">
         <button onclick="w3_close()" class="w3-bar-item w3-large">Close &times;</button>
@@ -22,7 +19,10 @@
         <a href="#" class="w3-bar-item w3-button">Messages</a>
         <a href="#" class="w3-bar-item w3-button">Log out</a>
     </div>
-        <button class="w3-button w3-teal w3-xlarge" onclick="w3_open()">☰</button>
+
+     <div class="w3-green">
+        <button class="w3-button w3-green w3-xlarge" onclick="w3_open()">☰</button>
+      </div>
         <!-- Sidebar ends -->
         
         
