--- a/landing pages/ufdash.html
+++ b/landing pages/ufdash.html
@@ -21,7 +21,9 @@
         <a href="#" class="w3-bar-item w3-button">Bookings and Orders</a>
         <a href="#" class="w3-bar-item w3-button">Log out</a>
     </div>
-        <button class="w3-button w3-teal w3-xlarge" onclick="w3_open()">☰</button>
+    <div class="w3-green">
+        <button class="w3-button w3-green w3-xlarge" onclick="w3_open()">☰</button>
+      </div>
         <!-- Sidebar ends -->
         
         
