--- a/landing pages/foDash.html
+++ b/landing pages/foDash.html
@@ -27,6 +27,9 @@
 
     <div class="w3-green">
         <button class="w3-button w3-green w3-xlarge" onclick="w3_open()">☰</button>
+        <div>
+            <h3>Dashboard</h3>
+        </div>
       </div>
     
 
