--- a/auth/registerFone.html
+++ b/auth/registerFone.html
@@ -92,19 +92,6 @@
                 </div>
               </fieldset>
               <fieldset>
-                <legend>Authentication</legend>
-                <div class="form-group">
-                  <label>Unique number:</label>
-                  <input type="number" class="form-control" name="unique number" id="uN">
-                  <small id="uNErr"></small>
-                </div>
-                <div class="form-group">
-                  <label for="pwd">Password:</label>
-                  <input type="password" class="form-control" id="pwd" name="password">
-                  <small id="pwdErr"></small>
-                </div>
-              </fieldset>
-              <fieldset>
                 <legend>Other</legend>
                 <div class="form-group">
                   <label>Phone number:</label>
@@ -160,6 +147,19 @@
                       value="Dairy farming"><span>Dairy Farming</span>
                   </label>
                   <small id="actErr"></small>
+                </div>
+              </fieldset>
+              <fieldset>
+                <legend>Authentication</legend>
+                <div class="form-group">
+                  <label>Unique number:</label>
+                  <input type="text" class="form-control" name="unique number" id="uN">
+                  <small id="uNErr"></small>
+                </div>
+                <div class="form-group">
+                  <label for="pwd">Password:</label>
+                  <input type="password" class="form-control" id="pwd" name="password">
+                  <small id="pwdErr"></small>
                 </div>
               </fieldset>
               <div class="button">
