--- a/auth/registerUfarmer.html
+++ b/auth/registerUfarmer.html
@@ -26,15 +26,13 @@
       margin-top: 20px;
       margin-bottom: 20px;
     }
-
-    .info {
-      font-style: italic;
-      text-align: center;
-
+    fieldset {
+      background-color: azure;
     }
 
-    form {
-      background-color: azure;
+    legend {
+      background-color: rgb(128, 128, 128);
+      color: rgb(15, 15, 15);
     }
   </style>
   <title>RegisterUF</title>
@@ -46,18 +44,19 @@
   <!-- nav bar ends here -->
   <div class="image">
     <div class="row justify-content-center">
-      <div class="info">
-        <h3>REGISTER HERE</h3>
-        <h6>Note:This form is to be filled in by the farmer one </h6>
-      </div>
       <div class="col-md-6">
         <div class="card">
+          <div class="card-header">
+            <h3>Register Urban Farmer</h3>
+          </div>
           <div class="card-body">
             <form id="regform" action="#" onsubmit="return validate (event)" method="post">
               <div class="form-group">
-                <label>First name:</label>
-                <input type="text" class="form-control" name="firstname" id="fName" />
-                <small id="fNameErr"></small>
+                <fieldset>
+                  <legend>Bio-Data</legend>
+                  <label>First name:</label>
+                  <input type="text" class="form-control" name="firstname" id="fName" />
+                  <small id="fNameErr"></small>
               </div>
               <div class="form-group">
                 <label>Second name:</label>
@@ -79,6 +78,9 @@
                 </label>
                 <small id="gndErr"></small>
               </div>
+              </fieldset>
+              <fieldset>
+                <legend>Other</legend>
               <div class="form-group">
                 <label>Phone number:</label>
                 <input type="text" class="form-control" name="phone number" id="pNum" />
@@ -86,7 +88,7 @@
               </div>
               <div class="form-group">
                 <label>NIN:</label>
-                <input type="number" class="form-control" name="NIN" id="nin" />
+                <input type="number" class="form-control" name="NIN" id="nin"/>
                 <small id="ninErr"></small>
               </div>
               <div class="form-group">
@@ -102,7 +104,8 @@
               <div class="form-group">
                 <label>Activities carried out:</label>
                 <label class="form-check">
-                  <input type="checkbox" class="form-check-input" id="poultry" name="poultry" value="Poultry Farming"><span>Poultry Farming</span>
+                  <input type="checkbox" class="form-check-input" id="poultry" name="poultry"
+                    value="Poultry Farming"><span>Poultry Farming</span>
                 </label>
                 <label class="form-check">
                   <input type="checkbox" class="form-check-input" id="hort" name="horticulture"
@@ -119,6 +122,9 @@
                 <input type="date" class="form-control" name="dreg" id="dr" />
                 <small id="drErr"></small>
               </div>
+              </fieldset>
+              <fieldset>
+                <legend>Authentication</legend>
               <div class="form-group">
                 <label>Unique id:</label>
                 <input type="number" class="form-control" name="unique id" id="uI" />
@@ -129,6 +135,7 @@
                 <input type="password" class="form-control" id="pwd" name="password" />
                 <small id="pwdErr"></small>
               </div>
+              </fieldset>
               <div class="checkbox">
                 <label><input type="checkbox" /> Remember me</label>
               </div>
