--- a/auth/signup.html
+++ b/auth/signup.html
@@ -14,76 +14,110 @@
         margin-top: 20px;
         margin-bottom: 20px;
     }
+
+    fieldset {
+        background-color: azure;
+    }
+
+    legend {
+        background-color: rgb(128, 128, 128);
+        color: rgb(15, 15, 15);
+    }
+
+    .image {
+        background-image: url("/image/farmland.jpg");
+        /* The image used */
+        background-color: #cccccc;
+        /* Used if the image is unavailable */
+        /* You must set a specified height */
+        background-position: relative;
+        /* Center the image */
+        background-repeat: no-repeat;
+        /* Do not repeat the image */
+        background-size: cover;
+        /* Resize the background image to cover the entire container */
+        background-attachment: fixed;
+    }
 </style>
 
 <body>
-     <!-- nav starts Here -->
-     <div w3-include-html="/includes/navbar.html"></div>
-     <!-- nav bar ends here -->
-    <div class="row justify-content-center">
-        <div class="col-5">
-            <div class="card">
-                <div class="card-header">SIGN UP</div>
-                <div class="card-body">
-                    <form action="/action_page.php">
-                        <fieldset>
-                            <legend>Bio-Data</legend>
-                            <div class="form-group">
-                                <label for="firstname">First name:</label>
-                                <input type="text" class="form-control" id="fN">
-                            </div>
-                            <div class="form-group">
-                                <label for="lastname">Last name:</label>
-                                <input type="text" class="form-control" id="lN">
-                            </div>
-                            <div class="form-group">
-                                <label for="dob">Date of birth:</label>
-                                <input type="date" class="form-control" id="dob">
-                            </div>
-                            <div class="form-group">
-                                <label for="gender">Gender:</label>
-                                <label class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="gender" id="male"
-                                        value="male"><span>Male</span>
+    <!-- nav starts Here -->
+    <div w3-include-html="/includes/navbar.html"></div>
+    <!-- nav bar ends here -->
+    <div class="image">
+        <div class="row justify-content-center">
+            <div class="col-5">
+                <div class="card">
+                    <div class="card-header">SIGN UP</div>
+                    <div class="card-body">
+                        <form action="#" id="signup" onsubmit="return validate(event)" method="post" >
+                            <fieldset>
+                                <legend>Bio-Data</legend>
+                                <div class="form-group">
+                                    <label for="firstname">First name:</label>
+                                    <input type="text" class="form-control" id="fN">
+                                    <small id="fNErr"></small>
+                                </div>
+                                <div class="form-group">
+                                    <label for="lastname">Last name:</label>
+                                    <input type="text" class="form-control" id="lN">
+                                    <small id="lNErr"></small>
+                                </div>
+                                <div class="form-group">
+                                    <label for="dob">Date of birth:</label>
+                                    <input type="date" class="form-control" id="dob">
+                                    <small id="dbErr"></small>
+                                </div>
+                                <div class="form-group">
+                                    <label for="gender">Gender:</label>
+                                    <label class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="gender" id="male"
+                                            value="male"><span>Male</span>
+                                    </label>
+                                    <label class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="gender" id="female"
+                                            value="female"><span>Female</span>
+                                    </label>
+                                    <small id="gndErr"></small>
+                                </div>
+                            </fieldset>
+                            <fieldset>
+                                <legend>Authentication</legend>
+                                <div class="form-group">
+                                    <label for="phonenumber">Phone number:</label>
+                                    <input type="text" class="form-control" id="pNum">
+                                    <small id="pNumErr"></small>
+                                </div>
+                                <div class="form-group">
+                                    <label for="username">User name:</label>
+                                    <input type="text" class="form-control" id="username">
+                                    <small id="uNErr"></small>
+                                </div>
+                                <div class="form-group">
+                                    <label for="password">Password:</label>
+                                    <input type="password" class="form-control" id="pwd">
+                                    <small id="pwdErr"></small>
+                                </div>
+                            </fieldset>
+                            <div class="form-group form-check">
+                                <label class="form-check-label">
+                                    <input class="form-check-input" type="checkbox"> Remember me
                                 </label>
-                                <label class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="gender" id="female"
-                                        value="female"><span>Female</span>
-                                </label>
-                                <small id="gndErr"></small>
                             </div>
-                        </fieldset>
-                        <fieldset>
-                            <legend>Authentication</legend>
-                            <div class="form-group">
-                                <label for="email">Email:</label>
-                                <input type="text" class="form-control" id="email">
-                            </div>
-                            <div class="form-group">
-                                <label for="username">User name:</label>
-                                <input type="text" class="form-control" id="username">
-                            </div>
-                            <div class="form-group">
-                                <label for="pwd">Password:</label>
-                                <input type="password" class="form-control" id="pwd">
-                            </div>
-                        </fieldset>
-                        <div class="form-group form-check">
-                            <label class="form-check-label">
-                                <input class="form-check-input" type="checkbox"> Remember me
-                            </label>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                    </form>
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-       <!-- footer starts here -->
-       <div w3-include-html="/includes/footer.html"></div>
-       <!-- footer ends here -->
-       <script src="/bootstrap/js/bootstrap.js"></script>
-       <script src="/includes/custom.js"></script>
+    <!-- footer starts here -->
+    <div w3-include-html="/includes/footer.html"></div>
+    <!-- footer ends here -->
+
+    <script src="/js/signUpValidate.js"></script>
+    <script src="/bootstrap/js/bootstrap.js"></script>
+    <script src="/includes/custom.js"></script>
 </body>
 
 </html>
