--- a/products/upload.html
+++ b/products/upload.html
@@ -8,12 +8,7 @@
     <link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <title>Upload</title>
-
-
     <Style>
-        /* .card-body {
-            background-color: ;
-        } */
         .row{
             padding-top: 20px;
         }
@@ -37,7 +32,11 @@
                     <div class="card header"><h5>UPLOAD HERE</h5></div>
                     <div class="card-body">
                         <form action="#" name="upload form" id="upload" onsubmit="validate(event)" method="post">
-                            <img src="" alt="food product" class="card-img-side">
+                            <div class="form form-group">
+                                <label>Product image</label>
+                                <input type="file" class="form-control" id="pImage" name="productimage">
+                                <small id="imgErr"></small>
+                            </div>
                             <div class="form form-group">
                                 <label>Product name</label>
                                 <input type="text" class="form-control" id="pName" name="product name">
