--- a/home.html
+++ b/home.html
@@ -9,7 +9,24 @@
   <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script> -->
    
   <style>
-    
+  /* .carousel-caption {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  text-align: center;
+  width: 100%;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.5);
+} */
+.carousel-caption {
+  background-color: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  align-items: center;
+}
+
+
    
   </style>
 </head>
