--- a/auth/registerFone.html
+++ b/auth/registerFone.html
@@ -131,12 +131,14 @@
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
-                    <small id="wdErr"></small>
+                  </select>
+                  <small id="wdErr"></small>
                 </div>
                 <div class="form-group">
                   <label>Activities carried out:</label>
                   <label class="form-check">
-                    <input type="checkbox" class="form-check-input" id="poultry" name="poultry" value="Poultry Farming"><span>Poultry Farming</span>
+                    <input type="checkbox" class="form-check-input" id="poultry" name="poultry"
+                      value="Poultry Farming"><span>Poultry Farming</span>
                   </label>
                   <label class="form-check">
                     <input type="checkbox" class="form-check-input" id="hort" name="horticulture"
