--- a/auth/registerUfarmer.html
+++ b/auth/registerUfarmer.html
@@ -26,6 +26,7 @@
       margin-top: 20px;
       margin-bottom: 20px;
     }
+
     fieldset {
       background-color: azure;
     }
@@ -81,60 +82,62 @@
               </fieldset>
               <fieldset>
                 <legend>Other</legend>
-              <div class="form-group">
-                <label>Phone number:</label>
-                <input type="text" class="form-control" name="phone number" id="pNum" />
-                <small id="pNumErr"></small>
-              </div>
-              <div class="form-group">
-                <label>NIN:</label>
-                <input type="number" class="form-control" name="NIN" id="nin"/>
-                <small id="ninErr"></small>
-              </div>
-              <div class="form-group">
-                <label>Ward:</label>
-                <select class="form-control" id="wd" name="ward">
-                  <option value="">(Select ward)</option>
-                  <option value="1">1</option>
-                  <option value="2">2</option>
-                  <option value="3">3</option>
-                  <option value="4">4</option>
+                <div class="form-group">
+                  <label>Phone number:</label>
+                  <input type="text" class="form-control" name="phone number" id="pNum" />
+                  <small id="pNumErr"></small>
+                </div>
+                <div class="form-group">
+                  <label>NIN:</label>
+                  <input type="number" class="form-control" name="NIN" id="nin" />
+                  <small id="ninErr"></small>
+                </div>
+                <div class="form-group">
+                  <label>Date of registration:</label>
+                  <input type="date" class="form-control" name="dreg" id="dr" />
+                  <small id="drErr"></small>
+                </div>
+                <div class="form-group">
+                  <label>Ward:</label>
+                  <select class="form-control" id="wd" name="ward">
+                    <option value="">(Select ward)</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                  </select>
                   <small id="wdErr"></small>
-              </div>
-              <div class="form-group">
-                <label>Activities carried out:</label>
-                <label class="form-check">
-                  <input type="checkbox" class="form-check-input" id="poultry" name="poultry"
-                    value="Poultry Farming"><span>Poultry Farming</span>
-                </label>
-                <label class="form-check">
-                  <input type="checkbox" class="form-check-input" id="hort" name="horticulture"
-                    value="Horticulture"><span>Horticulture</span>
-                </label>
-                <label class="form-check">
-                  <input type="checkbox" class="form-check-input" id="dairy" name="dairy"
-                    value="Dairy farming"><span>Dairy Farming</span>
-                </label>
-                <small id="actErr"></small>
-              </div>
-              <div class="form-group">
-                <label>Date of registration:</label>
-                <input type="date" class="form-control" name="dreg" id="dr" />
-                <small id="drErr"></small>
-              </div>
+                </div>
+                <div class="form-group">
+                  <label>Activities carried out:</label>
+                  <label class="form-check">
+                    <input type="checkbox" class="form-check-input" id="poultry" name="poultry"
+                      value="Poultry Farming"><span>Poultry Farming</span>
+                  </label>
+                  <label class="form-check">
+                    <input type="checkbox" class="form-check-input" id="hort" name="horticulture"
+                      value="Horticulture"><span>Horticulture</span>
+                  </label>
+                  <label class="form-check">
+                    <input type="checkbox" class="form-check-input" id="dairy" name="dairy"
+                      value="Dairy farming"><span>Dairy Farming</span>
+                  </label>
+                  <small id="actErr"></small>
+                </div>
+          
               </fieldset>
               <fieldset>
                 <legend>Authentication</legend>
-              <div class="form-group">
-                <label>Unique id:</label>
-                <input type="number" class="form-control" name="unique id" id="uI" />
-                <small id="uIErr"></small>
-              </div>
-              <div class="form-group">
-                <label for="pwd">Password:</label>
-                <input type="password" class="form-control" id="pwd" name="password" />
-                <small id="pwdErr"></small>
-              </div>
+                <div class="form-group">
+                  <label>Unique id:</label>
+                  <input type="number" class="form-control" name="unique id" id="uI" />
+                  <small id="uIErr"></small>
+                </div>
+                <div class="form-group">
+                  <label for="pwd">Password:</label>
+                  <input type="password" class="form-control" id="pwd" name="password" />
+                  <small id="pwdErr"></small>
+                </div>
               </fieldset>
               <div class="checkbox">
                 <label><input type="checkbox" /> Remember me</label>
