--- a/products/cart.html
+++ b/products/cart.html
@@ -18,12 +18,17 @@
 
         .summary {
             margin-bottom: 200px;
+
         }
 
         article {
             border-style: groove;
             border-radius: 10px;
             background-color: whitesmoke;
+        }
+        section{
+            height:500px;
+
         }
     </style>
 </head>
@@ -35,66 +40,104 @@
     <!-- nav bar ends here -->
 
     <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-8">
-                            <article>
-                                <header>
-                                    <h4>Cart</h4>
-                                </header>
-                                <div class="row">
-                                    <div class="col">
-                                        <img src="item-image.jpg" alt="Item image">
-                                    </div>
-                                    <div class="col">
-                                        <h5>Item Name</h5>
-                                    </div>
-                                    <div class="col">
-                                        <input type="number" value="1">
-                                    </div>
-                                    <div class="col">
-                                        <input type="number" value="1">
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col">
-                                        <img src="item-image.jpg" alt="Item image">
-                                    </div>
-                                    <div class="col">
-                                        <h5>Item Name</h5>
-                                    </div>
-                                    <div class="col">
-                                        <input type="number" value="1">
-                                    </div>
-                                    <div class="col">
-                                        <input type="number" value="2000">
-                                    </div>
-
-                            </article>
-                        </div>
-                        <div class="col-4">
-                            <article class=" summary">
-                                <h4>Cart summary</h4>
-                                <form action="#" method="post" class="form-inline">
-                                    <label>Total:</label>
-                                    <input class="form-control" type="text" id="total" name="total"
-                                        placeholder="UGX 0000" />
-                                    <small id="tlErr"></small>
-                                    <div class="checkbutton">
-                                        <button id="checkout" class="btn btn-success">CHECKOUT</button>
-                                    </div>
-                                </form>
-                            </article>
-                        </div>
-                    </div>
+        <div class="row">
+            <div class="col">
+                <article>
+                    <header>
+                        <h4>Cart</h4>
+                    </header>
+                    <table class="table table-striped table-hover">
+                        <thead>
+                            <tr class="table-primary">
+                                <th scope="col">#</th>
+                                <th scope="col">Product</th>
+                                <th scope="col">Quantity</th>
+                                <th scope="col">Cost</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row">1</th>
+                                <td><img src="item-image.jpg" alt="Item image"></td>
+                                <td><input type="number" value="1" id="cost" oninput=""></td>
+                                <td><input type="number" value="1" id="amount" oninput=""></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </article>
             </div>
+            <div class="col-4">
+                <article class=" summary">
+                    <h4>Cart summary</h4>
+                    <form action="#" method="post" class="form-inline">
+                        <label>Total:</label>
+                        <input class="form-control" oninput="" type="text" id="total" name="total"
+                            placeholder="UGX 0000" />
+                        <small id="tlErr"></small>
+                        <div class="checkbutton">
+                            <button id="checkout" class="btn btn-success">CHECKOUT</button>
+                        </div>
+                    </form>
+                </article>
+                <section class=" summary">
+                    <h4>payment</h4>
+                    <table class="table table-striped table-hover">
+                        <thead>
+                            <tr class="table-primary">
+                                <th scope="col">#</th>
+                                <th scope="col">Product</th>
+                                <th scope="col">Quantity</th>
+                                <th scope="col">Cost</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row">1</th>
+                                <td><img src="item-image.jpg" alt="Item image"></td>
+                                <td><input type="number" value="1" id="cost" oninput=""></td>
+                                <td><input type="number" value="1" id="amount" oninput=""></td>
+                            </tr>
+                            <tr>
+                                <th scope="row">1</th>
+                                <td><img src="item-image.jpg" alt="Item image"></td>
+                                <td><input type="number" value="1" id="cost" oninput=""></td>
+                                <td><input type="number" value="1" id="amount" oninput=""></td>
+                            </tr>
+                            <tr>
+                                <th scope="row">1</th>
+                                <td><img src="item-image.jpg" alt="Item image"></td>
+                                <td><input type="number" value="1" id="cost" oninput=""></td>
+                                <td><input type="number" value="1" id="amount" oninput=""></td>
+                            </tr>
+                        </tbody>
+                            <tr>
+                                <th scope="row">1</th>
+                                <td><img src="item-image.jpg" alt="Item image"></td>
+                                <td><input type="number" value="1" id="cost" oninput=""></td>
+                                <td><input type="number" value="1" id="amount" oninput=""></td>
+                            </tr>
+                        </tbody>
+                            <tr>
+                                <th scope="row">1</th>
+                                <td><img src="item-image.jpg" alt="Item image"></td>
+                                <td><input type="number" value="1" id="cost" oninput=""></td>
+                                <td><input type="number" value="1" id="amount" oninput=""></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </section>
+            </div>
+        </div>
+    </div>
 
-            <!-- footer starts here -->
-            <div w3-include-html="/includes/footer.html"></div>
-            <!-- footer ends here -->
 
-            <script src="/includes/custom.js"></script>
-            <script src="/bootstrap/js/bootstrap.js"></script>
-            <script src="/bootstrap/js/bootstrap.bundle.js"></script>
+    <!-- footer starts here -->
+    <div w3-include-html="/includes/footer.html"></div>
+    <!-- footer ends here -->
+
+    <script src="/includes/custom.js"></script>
+    <script src="/bootstrap/js/bootstrap.js"></script>
+    <script src="/bootstrap/js/bootstrap.bundle.js"></script>
 
 </body>
 
